fix scrollbar pour cause de mobileNav trop grande

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -167,6 +167,7 @@ h2{
 
 #mobileNav{
   width: 100%;
+  height: 20vh;
   display: none;
   position: fixed;
   top: 0;
